[package]
name = "solana-arb"
version = "0.1.0"
edition = "2024"

[workspace]

[workspace.dependencies]
solana-sdk = "~2.0"
solana-client = "~2.0"
solana-account-decoder = "~2.0"
anyhow = "1.0.53"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tokio = "1.43.0"

[dependencies]
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
tokio = { workspace = true, features = ["full"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bincode = "1.3.3"
anyhow = { workspace = true }
dotenvy = "0.15.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
rand = "0.8.5"
clap = { version = "4.5.26", features = ["derive"] }
spl-token = "6.0.0"


[dev-dependencies]
ctor = "0.2.8"
proptest = "1.2.0"
