[package]
name = "solana-arb"
version = "0.1.0"
edition = "2024"

[workspace]

[workspace.dependencies]
solana-sdk = "~2.0"
solana-client = "~2.0"
solana-account-decoder = "~2.0"
anyhow = "1.0.53"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tokio = "1.43.0"
serde = "1.0.203"
serde_json = "1.0.117"

[dependencies]
jupiter-swap-api-client = { git = "https://github.com/wisarmy/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
tokio = { workspace = true, features = ["full"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bincode = "1.3.3"
anyhow = { workspace = true }
dotenvy = "0.15.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
rand = "0.8.5"
clap = { version = "4.5.26", features = ["derive"] }
spl-token = "6.0.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.30"
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.17.8"
jito-json-rpc-client = { git = "https://github.com/wisarmy/jito-block-engine-json-rpc-client.git", package = "jito-block-engine-json-rpc-client", branch = "v2.0" }
bitflags = "2.7.0"
rust_decimal = "1.36.0"
uuid = { version = "1.12.0", features = ["v4"] }


[dev-dependencies]
ctor = "0.2.8"
proptest = "1.2.0"
